--- a/documents/swagger-yaml/cp3-th.yaml
+++ b/documents/swagger-yaml/cp3-th.yaml
@@ -69,6 +69,7 @@ paths:
       parameters:
         - in: body
           name: Parameters
+          required: true
           schema:
             type: object
             required:
@@ -103,6 +104,7 @@ paths:
       parameters:
         - in: body
           name: Parameters
+          required: true
           schema:
             type: object
             required:
@@ -159,6 +161,7 @@ paths:
       parameters:
         - in: body
           name: Parameters
+          required: true
           schema:
             type: object
             required:
