--- a/documents/swagger-yaml/cp1-th.yaml
+++ b/documents/swagger-yaml/cp1-th.yaml
@@ -74,6 +74,13 @@ paths:
                 description: >-
                   if in level d, the maximum number of queries against the
                   target recharging function during learning
+              max-charge:
+                type: integer
+                minimum: 0
+                description: >-
+                  the maximum charge the battery can hold, in
+                  mWh. implicitly, all batteries have a minimum possible
+                  charge of 0 mWh
         '400':
           description: TH encountered an error producing configuration data
   /error:
