--- a/documents/swagger-yaml/cp1-th.yaml
+++ b/documents/swagger-yaml/cp1-th.yaml
@@ -52,11 +52,11 @@ paths:
                   name of a waypoint on the map
               discharge-function:
                 type: string
-                format: function_spec
+                format: function-spec
                 description: >-
                   if in level d, a description of the function dictating
                   the discharge of the battery, which is what we will
-                  learn.  TODO - this cant be a string
+                  learn.
               discharge-budget:
                 type: integer
                 description: >-
@@ -64,11 +64,11 @@ paths:
                   target function during learning
               charge-function:
                 type: string
-                format: function_spec
+                format: function-spec
                 description: >-
                   if in level d, a description of the function dictating
                   the recharging of the battery, which is what we will
-                  learn. TODO - this cant be a string
+                  learn.
               charge-budget:
                 type: integer
                 description: >-
@@ -99,8 +99,6 @@ paths:
             properties:
               error:
                 description: |-
-                  TODO -- add more error codes for other possible problems
-
                   one of a enumerated set of reasons that errors may arise
                    * parsing-error - one or more of the function
                                      descriptions failed to parse
@@ -175,11 +173,10 @@ paths:
                 format: float
               charge:
                 description: >-
-                  current turtlebot battery charge in mWh TODO - are these mins
-                  and maxes right?
+                  current turtlebot battery charge in mWh. cannot be more
+                  than the maximum specified in the response from `/ready`.
                 type: integer
-                minimum: 16000
-                maximum: 32000
+                minimum: 0
               predicted_arrival:
                 description: 'current best prediction of arrival time, in simulation time'
                 type: integer
@@ -233,10 +230,11 @@ paths:
                 type: number
                 format: float
               charge:
-                description: final charge measure of the turtlebot TODO - check ranges
+                description: >-
+                  final charge measure of the turtlebot. cannot be more
+                  than the maximum specified in the response from `/ready`.
                 type: integer
-                minimum: 16000
-                maximum: 32000
+                minimum: 0
               sim_time:
                 description: the final internal simulation time
                 type: integer
